--- a/tasks/build-go-docker-image/task.yml
+++ b/tasks/build-go-docker-image/task.yml
@@ -4,21 +4,20 @@ image_resource:
   source:
     repository: loggregator/base
 inputs:
-- name: loggregator-ci # repo container Dockerfiles
+- name: context-repo # repo that contains the source docker context
 - name: source-repo # repo to build static binaries from
 outputs:
 - name: build-image # the place to store the build context and tag
 params:
   # - Required
+  # - The path in the context-repo where the context is located
+  CONTEXT_PATH:
+
+  # - Required
   # - The base package for the Go source repo
   BASE_PACKAGE:
 
-  # - The sub-package, relative to the BASE_PACKAGE that is being built.
+  # - The sub-package, relative to the BASE_PACKAGE that is being built
   SUB_PACKAGE:
-
-  # - Required
-  # - The name of the directory in docker-images that contains the Dockerfile
-  #   and the build_bin.sh
-  IMAGE_NAME:
 run:
   path: loggregator-ci/tasks/build-go-docker-image/task
