--- a/tasks/build-go-docker-image/task.yml
+++ b/tasks/build-go-docker-image/task.yml
@@ -6,6 +6,7 @@ image_resource:
 inputs:
 - name: context-repo # repo that contains the source docker context
 - name: source-repo # repo to build static binaries from
+- name: loggregator-ci # repo for task file
 outputs:
 - name: build-image # the place to store the build context and tag
 params:
