Change loggregator namespace to oratos
[#157839470]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -318,7 +318,7 @@ jobs:
           kind: Secret
           metadata:
             name: loggregator-tls-certs
-            namespace: loggregator
+            namespace: oratos
           type: Opaque
           data:'
 
