--- a/pipelines/container-images.yml
+++ b/pipelines/container-images.yml
@@ -317,8 +317,33 @@ jobs:
   plan:
   - get: fluentd-image-docker-build-context
     trigger: true
+  - task: create-tag
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/base
+      inputs:
+      - name: fluentd-image-docker-build-context
+      outputs:
+      - name: tag
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          #!/bin/bash
+          set -ex
+
+          # compute sha for tagging the docker image
+          sha="$(cd fluentd-image-docker-build-context && git rev-parse @)"
+
+          echo "$sha" > tag/tag
   - put: fluentd-image
     params:
       build: fluentd-image-docker-build-context/docker-images/fluentd
+      tag: tag/tag
       tag_as_latest: true
+      cache: true
       cache_tag: latest
