Add k8s-syslog-blackbox jobs for flow,drip and flood spinner
[#157838263]

--- a/pipelines/playground-blackbox-tests.yml
+++ b/pipelines/playground-blackbox-tests.yml
@@ -89,6 +89,69 @@ jobs:
       MESSAGE: "HOURLY"
     timeout: 15m
 
+- name: k8s-syslog-floodspinner
+  public: false
+  serial: true
+  serial_groups: ["restage"]
+  plan:
+  - get: loggregator-ci
+  - get: deployments-loggregator
+  - get: 15m
+    trigger: true
+  - task: run-k8s-syslog-blackbox-tests
+    file: loggregator-ci/tasks/k8s-syslog-blackbox/task.yml
+    params:
+      PAPERTRAIL_TOKEN: {{papertrail-token}}
+      WAIT: 60
+      CYCLES: 10000
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DELAY: "2"
+      DELAY_UNIT: "us"
+      MESSAGE: "FIFTEEN-MINUTE"
+    timeout: 15m
+
+- name: k8s-syslog-dripspinner
+  public: false
+  serial: true
+  serial_groups: ["restage"]
+  plan:
+  - get: loggregator-ci
+  - get: deployments-loggregator
+  - get: 1h
+    trigger: true
+  - task: run-k8s-syslog-blackbox-tests
+    file: loggregator-ci/tasks/k8s-syslog-blackbox/task.yml
+    params:
+      PAPERTRAIL_TOKEN: {{papertrail-token}}
+      WAIT: 600
+      CYCLES: 1000
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DELAY: "500"
+      DELAY_UNIT: "ms"
+      MESSAGE: "HOURLY"
+    timeout: 15m
+
+- name: k8s-syslog-flowspinner
+  public: false
+  serial: true
+  serial_groups: ["restage"]
+  plan:
+  - get: loggregator-ci
+  - get: deployments-loggregator
+  - get: 1h
+    trigger: true
+  - task: run-k8s-syslog-blackbox-tests
+    file: loggregator-ci/tasks/k8s-syslog-blackbox/task.yml
+    params:
+      PAPERTRAIL_TOKEN: {{papertrail-token}}
+      WAIT: 60
+      CYCLES: 1000
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DELAY: "1"
+      DELAY_UNIT: "ms"
+      MESSAGE: "HOURLY"
+    timeout: 15m
+
 - name: log-cache-blackbox
   public: false
   serial: true
