--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -178,6 +178,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/log-cache-acceptance-tests-release
+    branch: master
 
 - name: loggregator-src
   type: git
