--- a/pipelines/backport-ops/loggregator-101.yml
+++ b/pipelines/backport-ops/loggregator-101.yml
@@ -68,6 +68,8 @@
 - type: remove
   path: /jobs/name=loggregator-master-promotion
 
+# Edit jobs
+
 # Change bump submodule responsibilities
 - type: remove
   path: /jobs/name=loggregator-bump-submodule/plan/0/aggregate/get=loggregator-agent
@@ -99,8 +101,57 @@
   path: /jobs/name=cf-deploy/plan/1/aggregate/get=loggregator-agent-release
 - type: remove
   path: /jobs/name=cf-deploy/plan/2/aggregate/task=upload-loggregator-agent-release
+# copy ops files
 - type: remove
   path: /jobs/name=cf-deploy/plan/3/do/task=copy-ops-files/config/inputs/name=loggregator-agent-release
+- type: replace
+  path: /jobs/name=cf-deploy/plan/3/do/task=copy-ops-files/config/run/args
+  value:
+  - "-c"
+  - |
+    set -e
+
+    cp cf-deployment/operations/windows-cell.yml ops-files/
+    cp cf-deployment/operations/scale-to-one-az.yml ops-files/
+    cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
+    cp cf-deployment/operations/experimental/use-bosh-dns-for-containers.yml ops-files/
+    cp cf-deployment/operations/use-compiled-releases.yml ops-files/
+
+    cat <<EOT >> ops-files/on-the-fly.yml
+    - type: replace
+      path: /releases/name=loggregator
+      value:
+        name: loggregator
+        version: latest
+    - type: replace
+      path: /update/max_in_flight
+      value: 5
+    - type: replace
+      path: /releases/name=diego
+      value:
+        name: diego
+        version: $(bosh int cf-deployment/cf-deployment.yml --path=/releases/name=diego/version)
+        url: $(bosh int cf-deployment/cf-deployment.yml --path=/releases/name=diego/url)
+        sha1: $(bosh int cf-deployment/cf-deployment.yml --path=/releases/name=diego/sha1)
+    - type: replace
+      path: /instance_groups/name=doppler/instances
+      value: 2
+    - path: /releases/name=consul/url
+      type: replace
+      value: https://bosh.io/d/github.com/cloudfoundry-incubator/consul-release?v=192
+    - path: /releases/name=consul/sha1
+      type: replace
+      value: 399894e3b4f5d4ba7ea5abe4ab89190ec2d4ad56
+    EOT
+- type: replace
+  path: /jobs/name=cf-deploy/plan/3/do/task=cf-deploy/params/OPS_FILES
+  value: |
+    scale-to-one-az.yml
+    use-compiled-releases.yml
+    on-the-fly.yml
+    windows-cell.yml
+    use-bosh-dns.yml
+    use-bosh-dns-for-containers.yml
 
 - type: remove
   path: /jobs/name=cats/plan/0/aggregate/get=loggregator-agent-release
